--- a/app/.env
+++ b/app/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:mSXVuOjxM+AIPo+4Dd9u6fEXkf82ZrqDDLxTjMCmPDs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+DEFAULT_AVATAR=https://img.freepik.com/premium-vector/avatar-profile-icon-vector-illustration_276184-165.jpg?w=826
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
